--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcmail-jdk15</artifactId>
+			<version>1.46</version>
+		</dependency>
 	</dependencies>
 
 	<build>
