--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8081
 
-admin-service.certificate-signing-request-url = http://localhost:8080/admin-service/api/csr
+admin-service.certificate-signing-request-url = http://localhost:8080/api/csr
