--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -73,6 +73,16 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>
+					src/main/resources
+				</directory>
+				<filtering>
+					false
+				</filtering>
+			</resource>
+		</resources>
 	</build>
 
 </project>
