--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,3 +1,12 @@
-keystore.file=src/main/resources/keystore.jks
+keystore.file=src/main/resources/keystore
 keystore.storepass= bongcloud
 keystore.keypass = attack
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=medihub.mail@gmail.com
+spring.mail.password=medihubmail123
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.transport.protocol = smtp
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.smtp.ssl.trust = smtp.gmail.com
