Added keycloak support

--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.transport.protocol = smtp
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.smtp.ssl.trust = smtp.gmail.com
+
+#keycloak.realm=medisec
+#keycloak.auth-server-url=http://localhost:9900/auth
+#keycloak.ssl-required=external
+#keycloak.resource=admin-service
+#keycloak.bearer-only=true
+#keycloak.credentials.secret=ac3b8037-74f9-45bb-80d1-af98adfc290b
+
+#keycloak.securityConstraints[0].authRoles[0]=super-admin
+#keycloak.securityConstraints[0].securityCollections[0].name=protected
+#keycloak.securityConstraints[0].securityCollections[0].patterns[0]=/*
+#keycloak.policy-enforcer-config.lazy-load-paths=true
+
+logging.level.org.springframework.web: TRACE
+logging.level.org.springframework.security: TRACE
+logging.level.org.keycloak: TRACE
