--- a/web-ui/tsconfig.json
+++ b/web-ui/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -15,6 +14,16 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "vendors": [
+        "dist/vendors/vendors",
+        "dist/vendors"
+      ],
+      "keycloak": [
+        "dist/keycloak/keycloak",
+        "dist/keycloak"
+      ]
+    }
   }
 }
