Added https for admin

--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -11,6 +11,13 @@ spring.mail.properties.mail.transport.protocol = smtp
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.smtp.ssl.trust = smtp.gmail.com
 
+server.ssl.key-store=classpath:keystore
+server.ssl.key-store-password=bongcloud
+server.ssl.key-store-type=jks
+server.ssl.key-alias=example (server.example.com)
+server.ssl.key-password=attack
+server.port=8443
+
 #keycloak.realm=medisec
 #keycloak.auth-server-url=http://localhost:9900/auth
 #keycloak.ssl-required=external
