--- a/web-ui/angular.json
+++ b/web-ui/angular.json
@@ -28,7 +28,10 @@
               "projects/hospital-ui/src/assets"
             ],
             "styles": [
-              "projects/hospital-ui/src/styles.scss"
+              "projects/hospital-ui/src/styles.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
