--- a/web-ui/angular.json
+++ b/web-ui/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "projects/hospital-ui/src/styles.css",
+              "./node_modules/primeflex/primeflex.css",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
@@ -154,6 +155,7 @@
             ],
             "styles": [
               "projects/admin-ui/src/styles.scss",
+              "./node_modules/primeflex/primeflex.css",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
