--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.0.4",
     "keycloak-angular": "^8.1.0",
     "keycloak-js": "^13.0.0",
+    "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "rxjs": "~6.6.0",
