Https for hospital

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -1,3 +1,17 @@
-server.port=8081
+#server.port=8081
 
 admin-service.certificate-signing-request-url = https://localhost:8443/api/certificate-requests
+
+keystore.file=src/main/resources/keystore
+keystore.storepass= bongcloud
+
+server.ssl.key-store=classpath:clientkeystore
+server.ssl.key-store-password=bongcloud
+server.ssl.key-store-type=jks
+server.ssl.key-alias=server.hospital
+server.ssl.key-password=attack
+server.port=8481
+
+logging.level.org.springframework.web: TRACE
+logging.level.org.springframework.security: TRACE
+logging.level.org.keycloak: TRACE
