--- a/web-ui/angular.json
+++ b/web-ui/angular.json
@@ -70,7 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "hospital-ui:build",
-            "port": 4201
+            "port": 4201,
+            "ssl": true,
+            "sslKey": "./projects/hospital-ui/ssl/hospital.key",
+            "sslCert": "./projects/hospital-ui/ssl/hospital.crt"
           },
           "configurations": {
             "production": {
