--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 server.port=8081
 
 admin-service.certificate-signing-request-url = https://localhost:8443/api/certificate-requests
+
+spring.data.mongodb.host = localhost
+spring.data.mongodb.port = 27017
+spring.data.mongodb.database=MedicalRecord
+
+primary.mongodb.host=localhost
+primary.mongodb.port=27017
+primary.mongodb.database=MedicalRecord
+secondary.mongodb.host=localhost
+secondary.mongodb.port=27017
+secondary.mongodb.database=Attack
