--- a/hospital-service/pom.xml
+++ b/hospital-service/pom.xml
@@ -113,7 +113,22 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/org.jbpm/jbpm-kie-services -->
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-kie-services</artifactId>
+			<version>7.54.0.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.kie/kie-api -->
+<!--		<dependency>-->
+<!--			<groupId>org.kie</groupId>-->
+<!--			<artifactId>kie-api</artifactId>-->
+<!--			<version>7.54.0.Final</version>-->
+<!--			<scope>provided</scope>-->
+<!--		</dependency>-->
+
+
+	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
