Added test alarm

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -16,11 +16,11 @@ spring.data.mongodb.secondary.database=FirewallLog
 keystore.file=src/main/resources/keystore
 keystore.storepass= bongcloud
 
-server.ssl.key-store=classpath:clientkeystore
-server.ssl.key-store-password=bongcloud
-server.ssl.key-store-type=jks
-server.ssl.key-alias=server.hospital
-server.ssl.key-password=attack
+#server.ssl.key-store=classpath:clientkeystore
+#server.ssl.key-store-password=bongcloud
+#server.ssl.key-store-type=jks
+#server.ssl.key-alias=server.hospital
+#server.ssl.key-password=attack
 server.port=8481
 
 logging.level.org.springframework.web: TRACE
