--- a/hospital-service/pom.xml
+++ b/hospital-service/pom.xml
@@ -2,6 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>pom</packaging>
+	<modules>
+		<module>medical-record-alarm</module>
+		<module>proba</module>
+		<module>medical-record-alarm</module>
+	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -107,18 +113,17 @@
 
 		<!-- Mongo -->
 		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>3.12.8</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
-		<!--        <dependency>-->
-<!--            <groupId>com.medisec</groupId>-->
-<!--            <artifactId>hospital-service</artifactId>-->
-<!--            <version>0.0.1-SNAPSHOT</version>-->
-<!--        </dependency>-->
+		<dependency>
+            <groupId>com.medisec</groupId>
+            <artifactId>hospital-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
-		<!--		Kie -->
+		<!-- Kie -->
 		<dependency>
 			<groupId>org.kie</groupId>
 			<artifactId>kie-ci</artifactId>
@@ -130,13 +135,12 @@
 			<version>${kie.version}</version>
 		</dependency>
 
+		<!-- Configuration for multiple mongo properties -->
 		<dependency>
-			<groupId>com.medisec</groupId>
-			<artifactId>medical-record-alarm</artifactId>
-			<type>jar</type>
-			<version>1.0.0-SNAPSHOT</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
-
 	</dependencies>
 
 	<dependencyManagement>
