--- a/medical-record-alarm/pom.xml
+++ b/medical-record-alarm/pom.xml
@@ -3,26 +3,113 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<groupId>com.bongcloud</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>medical-record-alarm</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>medical-record-alarm</name>
+    <packaging>pom</packaging>
+    <description>A sample Drools Maven project</description>
 
-  <groupId>com.medisec</groupId>
-  <artifactId>medical-record-alarm</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>medical-record-alarm</name>
-  <packaging>jar</packaging>
-  
-  <description>A sample Drools Maven project</description>
-  <dependecies>
+    
+
+    <properties>
+    <runtime.version>6.4.0.Final</runtime.version>
+     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+          <maven.compiler.source>11</maven.compiler.source>
+          <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
+    <repositories>
+    <repository>
+      <id>jboss-public-repository-group</id>
+      <name>JBoss Public Repository Group</name>
+      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+      </snapshots>
+    </repository>
+    </repositories>
+
+    <dependencies>
     <dependency>
       <groupId>org.kie</groupId>
-      <artifactId>kie-ci</artifactId>
-      <version>${kie.version}</version>
+      <artifactId>kie-api</artifactId>
+      <version>${runtime.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.kie</groupId>
-      <artifactId>kie-spring</artifactId>
-      <version>${kie.version}</version>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-core</artifactId>
+      <version>${runtime.version}</version>
     </dependency>
-  </dependecies>
+    <dependency>
+      <groupId>org.drools</groupId>
+      <artifactId>drools-decisiontables</artifactId>
+      <version>${runtime.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.jbpm</groupId>
+      <artifactId>jbpm-test</artifactId>
+      <version>${runtime.version}</version>
+    </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Spec.java</include>
+                        <include>**/*Test.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.gmaven</groupId>
+                <artifactId>gmaven-plugin</artifactId>
+                <version>1.5</version>
+                <configuration>
+                    <providerSelection>2.0</providerSelection>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generateStubs</goal>
+                            <goal>compile</goal>
+                            <goal>generateTestStubs</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.groovy</groupId>
+                        <artifactId>groovy</artifactId>
+                        <version>2.0.5</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
