--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 #server.port=8081
+keystore.file=src/main/resources/keystore
+keystore.storepass= bongcloud
+keystore.keypass = attack
 
 admin-service.certificate-signing-request-url = https://localhost:8443/api/certificate-requests
 
@@ -11,10 +14,6 @@ spring.data.mongodb.port=27017
 
 spring.data.mongodb.primary.database=MedicalRecord
 spring.data.mongodb.secondary.database=FirewallLog
-
-
-keystore.file=src/main/resources/keystore
-keystore.storepass= bongcloud
 
 #server.ssl.key-store=classpath:clientkeystore
 #server.ssl.key-store-password=bongcloud
