--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -6,14 +6,9 @@ keystore.keypass = attack
 admin-service.certificate-signing-request-url = https://localhost:8443/api/certificate-requests
 
 # Mongodb
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration
-
-spring.data.mongodb.prefix=mongodb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-
-spring.data.mongodb.primary.database=MedicalRecord
-spring.data.mongodb.secondary.database=FirewallLog
+spring.data.mongodb.database=Hospital
 
 server.ssl.key-store=classpath:clientkeystore
 server.ssl.key-store-password=bongcloud
