Added log sources

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -25,3 +25,5 @@ server.port=8481
 logging.level.org.springframework.web: TRACE
 logging.level.org.springframework.security: TRACE
 logging.level.org.keycloak: TRACE
+
+log.sources.config="idk"
