Added mongo to docker and updated hospital service connection

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -6,9 +6,12 @@ keystore.keypass = attack
 admin-service.certificate-signing-request-url = https://localhost:8443/api/certificate-requests
 
 # Mongodb
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=Hospital
+spring.data.mongodb.username=root
+spring.data.mongodb.password=example
 
 server.ssl.key-store=classpath:clientkeystore
 server.ssl.key-store-password=bongcloud
