--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,20 @@ version: "3.2"
 volumes:
   postgres_data:
     driver: local
+  mongo_data:
+    driver: local
 services:
+  mongo:
+    image: mongo
+    restart: always
+    volumes:
+      - mongo_data:/data/db
+    ports:
+      - "27017:27017"
+    environment: 
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
   postgres:
     image: postgres
     volumes:
@@ -11,6 +24,7 @@ services:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
       POSTGRES_PASSWORD: password
+
   keycloak:
     image: jboss/keycloak
     ports:
