Added writing rules

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -20,3 +20,6 @@ server.port=8481
 logging.level.org.springframework.web: TRACE
 logging.level.org.springframework.security: TRACE
 logging.level.org.keycloak: TRACE
+
+template.rule.path=src/main/resources/rule_template/template_rule.drl
+rules.path=src/main/resources/rules/
