--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "brace": "^0.11.1",
     "keycloak-angular": "^8.1.0",
     "keycloak-js": "^13.0.0",
+    "ng2-ace-editor": "^0.3.9",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
