Added log sources updating

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -24,4 +24,4 @@ logging.level.org.springframework.web: TRACE
 logging.level.org.springframework.security: TRACE
 logging.level.org.keycloak: TRACE
 
-log.sources.config="idk"
+log.sources.config=../hospital-service/src/main/resources/logSources.json
