--- a/hospital-service/pom.xml
+++ b/hospital-service/pom.xml
@@ -93,6 +93,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.krakens</groupId>
+			<artifactId>java-grok</artifactId>
+			<version>0.1.9</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
