--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -75,7 +75,10 @@
 			<artifactId>keycloak-authz-client</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 		<!-- Test -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
