--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -2,12 +2,13 @@ keystore.file=src/main/resources/keystore
 keystore.storepass= bongcloud
 keystore.keypass = attack
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=AdminDB
+spring.data.mongodb.username=root
+spring.data.mongodb.password=example
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=medihub.mail@gmail.com
