Pending revocation for hospital

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port=8081
-keystore.file=src/main/resources/keystore
+keystore.file=src/main/resources/clientkeystore
 keystore.storepass= bongcloud
 keystore.keypass = attack
 
@@ -16,7 +16,7 @@ spring.data.mongodb.password=example
 server.ssl.key-store=classpath:clientkeystore
 server.ssl.key-store-password=bongcloud
 server.ssl.key-store-type=jks
-server.ssl.key-alias=hospital.med.com (bongcloudca.com)
+server.ssl.key-alias=hospital@med.com
 server.ssl.key-password=attack
 server.port=8481
 
@@ -25,3 +25,4 @@ logging.level.org.springframework.security: TRACE
 logging.level.org.keycloak: TRACE
 
 log.sources.config="idk"
+
