--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -23,3 +23,4 @@ logging.level.org.keycloak: TRACE
 
 template.rule.path=src/main/resources/rule_template/template_rule.drl
 rules.path=src/main/resources/rules/
+malicious.ips.config=../hospital-service/src/main/resources/maliciousIps.json
