--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -28,4 +28,4 @@ logging.level.org.keycloak: TRACE
 template.rule.path=src/main/resources/rule_template/template_rule.drl
 rules.path=src/main/resources/rules/
 malicious.ips.config=../hospital-service/src/main/resources/maliciousIps.json
-log.sources.config=../hospital-service/src/main/resources/logSources.jso
+log.sources.config=../hospital-service/src/main/resources/logSources.json
