updated certificate revoke

--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port=8081
-keystore.file=src/main/resources/clientkeystore
+keystore.file=../hospital-service/src/main/resources/clientkeystore
 keystore.storepass= bongcloud
 keystore.keypass = attack
 
@@ -25,7 +25,7 @@ logging.level.org.springframework.security: TRACE
 logging.level.org.keycloak: TRACE
 
 
-template.rule.path=src/main/resources/rule_template/template_rule.drl
-rules.path=src/main/resources/rules/
+template.rule.path=../hospital-service/src/main/resources/rule_template/template_rule.drl
+rules.path=../hospital-service/src/main/resources/rules/
 malicious.ips.config=../hospital-service/src/main/resources/maliciousIps.json
 log.sources.config=../hospital-service/src/main/resources/logSources.json
