--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.mail.properties.smtp.ssl.trust = smtp.gmail.com
 server.ssl.key-store=classpath:keystore
 server.ssl.key-store-password=bongcloud
 server.ssl.key-store-type=jks
-server.ssl.key-alias=server.med.com (bongcloudca.com)
+server.ssl.key-alias=server@medisec.com
 server.ssl.key-password=attack
 server.port=8480
 
