--- a/admin-service/src/main/resources/application.properties
+++ b/admin-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-keystore.file=src/main/resources/keystore
+keystore.file=../admin-service/src/main/resources/keystore
 keystore.storepass= bongcloud
 keystore.keypass = attack
 
