--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "brace": "^0.11.1",
+    "chart.js": "^2.9.4",
     "keycloak-angular": "^8.2.0",
     "keycloak-js": "^13.0.1",
     "ng2-ace-editor": "^0.3.9",
+    "ng2-charts": "^2.4.2",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
