--- a/hospital-service/src/main/resources/application.properties
+++ b/hospital-service/src/main/resources/application.properties
@@ -20,6 +20,9 @@ server.ssl.key-alias=hospital@med.com
 server.ssl.key-password=attack
 server.port=8481
 
+
+key.alias=tesss
+
 logging.level.org.springframework.web: TRACE
 logging.level.org.springframework.security: TRACE
 logging.level.org.keycloak: TRACE
